--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,7 @@
-server.port=8090
-
-# Disabled invocation target exception
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.hibernate.use-new-id-generator-mappings=false
 
-# Disabled spring banner in console
-spring.main.banner-mode=off
-
-# Oracle settings
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/kabum?useTimezone=true&serverTimezone=UTC
+# Database settings
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/kabum
 spring.datasource.username=eduardo
 spring.datasource.password=admin
-spring.datasource.driver.class=com.mysql.cj.jdbc.Driver
-
-# HikariCP settings
-# spring.datasource.hikari.*
-spring.datasource.hikari.connection-timeout=60000
-spring.datasource.hikari.maximum-pool-size=5
-
-# logging
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
-logging.level.org.hibernate.SQL=debug
-#logging.level.org.hibernate.type.descriptor.sql=trace
-logging.level.=error
+spring.jpa.hibernate.ddl-auto=update
