--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.hibernate.use-new-id-generator-mappings=false
 # Disabled spring banner in console
 spring.main.banner-mode=off
 
-# Oracle settings
+# Database settings
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/kabum?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=eduardo
 spring.datasource.password=admin
